--- a/src/main/resources/templates/tpl/list.html
+++ b/src/main/resources/templates/tpl/list.html
@@ -78,13 +78,13 @@
                         <tr th:each="m : ${grid.rows}">
                             <td th:text="${mStat.index + 1 + (grid.page - 1) * grid.pageSize}"></td>
                             <td th:each="v : ${grid.rows[mStat.index]}" th:class="${'text-' + report.reportColumnList.get(vStat.index).align.name().toLowerCase()}" th:if="${!report.reportColumnList.get(vStat.index).hidden}">
-                                <a href="javascript:;" th:if="${vStat.index == 1}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="showDialog('查看', '[[${m[0]}]]')"></a>
+                                <a href="javascript:;" th:if="${vStat.index == 1}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="showDialog('查看', [[${m[0]}]])"></a>
                                 <span th:if="${vStat.index > 1}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
                             </td>
                             <td class="text-center" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}">
-<!--                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('查看', '[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">查看</a>-->
-                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', '[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_edit')}">编辑</a>
-                                <a href="javascript:;" th:onclick="deleteRow('[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_delete')}">删除</a>
+<!--                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('查看', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">查看</a>-->
+                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_edit')}">编辑</a>
+                                <a href="javascript:;" th:onclick="deleteRow([[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_delete')}">删除</a>
                             </td>
                         </tr>
                         <tr th:if="${summary ne null}">
