--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sp="" lang="zh">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:sp="">
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
@@ -19,8 +20,54 @@
             border-top: 1px solid #c8ced3;
         }
 
-        .table-fixed-container {
-            max-height: calc(100vh - 340px);
+        .table-editor .form-control {
+            padding: 0 .5rem;
+            border: none;
+            border-radius: 0;
+            height: 32px;
+        }
+
+        .table-editor.table-sm th {
+            position: relative;
+            vertical-align: middle;
+            padding-left: .5rem;
+        }
+
+        .table-editor.table-sm label {
+            margin-bottom: 0;
+        }
+
+        .table-editor.table-sm td {
+            padding: 0;
+            vertical-align: middle;
+        }
+
+        .table-editor .required label:before, .table-editor label.required:before {
+            left: 0;
+        }
+
+        .table-editor tr td:first-child, .table-editor tr td:last-child {
+            padding: 0 .3rem;
+        }
+
+        #form-item .table-fixed-container {
+            max-height: calc(100vh - 440px);
+        }
+
+        #goods_receipt_container .table-fixed-container {
+            max-height: 120px;
+        }
+
+        .status-true {
+            color: #1da142;
+        }
+
+        .status-false {
+            color: #f86c6b;
+        }
+
+        .form-item .footer span {
+            margin-right: 1rem;
         }
     </style>
 </head>
@@ -56,39 +103,88 @@
                 <div id="table-container">
                     <form class="form-item" id="form-item">
                         <div class="table-fixed-container">
-                            <table class="table-thead">
+                            <table class="table-thead table-editor table table-responsive-sm table-striped table-sm">
                                 <thead>
                                 <tr>
-                                    <th style="width: 40px;">序号</th>
-                                    <th><label class="col-form-label col-sm-2 required">物料</label></th>
-                                    <th><label class="col-form-label col-sm-2">描述</label></th>
-                                    <th><label class="col-form-label col-sm-2 required">采购数量</label></th>
-                                    <th><label class="col-form-label col-sm-2">单位</label></th>
-                                    <th><label class="col-form-label col-sm-2">含税单价（元）</label></th>
-                                    <th><label class="col-form-label col-sm-2">含税金额（元）</label></th>
-                                    <th><label class="col-form-label col-sm-2">备注</label></th>
+                                    <th style="width: 50px">序号</th>
+                                    <th style="width: 100px;"><label class="required">物料</label></th>
+                                    <th><label>描述</label></th>
+                                    <th style="width: 100px;"><label class="required">采购数量</label></th>
+                                    <th style="width: 100px;"><label>单位</label></th>
+                                    <th style="width: 100px;"><label>含税单价（元）</label></th>
+                                    <th style="width: 100px;"><label>含税金额（元）</label></th>
+                                    <th><label>备注</label></th>
                                     <th style="width: 50px;"></th>
                                 </tr>
                                 </thead>
                             </table>
 
-                            <table id="table" class="table-tbody">
+                            <table id="table" class="table-tbody table-editor table table-responsive-sm table-bordered table-sm">
                                 <tbody>
                                 </tbody>
                             </table>
                         </div>
-                        <div class="pull-right mt-4 mr-5">
-                            <label>订单号：</label><span th:text="${po.code}" id="code_text"></span>
+                        <div class="pull-right mt-2 mr-5 footer">
+                            <label>订单号：</label><span class="bold" th:text="${po.code}" id="code_text"></span>
                             <input id="code" type="hidden" name="code" th:value="${po.code == null ? '1' : po.code}">
-                            <label>创建人：</label><span th:text="${session.user.name}"></span> 预计本单应付： <span id="total_amount" style="color: red;">0</span>元
+                            <label>创建人：</label><span class="bold" th:text="${createName}"></span>
+                            <label>创建时间：</label><span id="createTime" class="bold" th:text="${createTime}"></span>
+                            <label>预计本单应付：</label><span class="bold" id="total_amount" style="color: #f86c6b;">0</span>元
                             <input type="hidden" name="totalAmount" id="totalAmount">
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
+        <div class="nav-tabs-boxed" th:if="${po.id != null}">
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="home" aria-selected="false">收货记录</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" id="tab-1" role="tabpanel">
+                    <div id="goods_receipt_container" role="tabpanel">
+                        <div class="table-fixed-container">
+                            <table class="table table-responsive-sm table-bordered table-striped table-sm table-thead">
+                                <thead>
+                                <tr>
+                                    <th style="width: 50px" data-index>序号</th>
+                                    <th style="width: 100px" class="sortable active asc">物料</th>
+                                    <th>描述</th>
+                                    <th style="width: 100px">基本单位</th>
+                                    <th style="width: 100px" class="sortable text-right">订单数量</th>
+                                    <th style="width: 120px" class="sortable text-right" data-sort-type="number">已收货数量</th>
+                                    <th style="width: 120px" class="sortable text-right" data-sort-type="number">待收货数量</th>
+                                    <th style="width: 90px" class="sortable">状态</th>
+                                    <th style="width: 120px"></th>
+                                </tr>
+                                </thead>
+                            </table>
+                            <table class="table table-responsive-sm table-bordered table-striped table-sm table-tbody">
+                                <tbody>
+                                <tr th:each="s: ${goodsReceiptItemList}">
+                                    <td th:text="${sStat.index + 1}" data-index></td>
+                                    <td th:text="${s.materialCode}" th:data-sort-value="${s.materialCode}"></td>
+                                    <td th:text="${s.materialText}" th:data-sort-value="${s.materialText}"></td>
+                                    <td th:text="${s.unitText}" th:data-sort-value="${s.unitText}"></td>
+                                    <td th:text="${#numbers.formatDecimal(s.quantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.quantity}" th:class="text-right"></td>
+                                    <td th:text="${#numbers.formatDecimal(s.goodsReceiptQuantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.goodsReceiptQuantity}" th:class="text-right"></td>
+                                    <td th:text="${#numbers.formatDecimal(s.openQuantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.openQuantity}" th:class="text-right"></td>
+                                    <td th:class="${'status-' + s.complete}" th:data-sort-value="${s.complete}" th:text="${s.complete == true ? '已完成' : '未完成'}"></td>
+                                    <td>
+                                        <a href="javascript:;" th:onclick="openOnNewTab('[(${s.id})]', '[(${\'/reports/699659248728047616?root_reference_code=\'+s.purchaseOrderCode+\'&root_reference_item_id=\'+s.id+\'&material_id=\' + s.materialId})]', '物料凭证')">物料凭证</a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="dialogInput" style="display: none"></div>
-        <div class="operator-bar text-center" id="operator-bar">
+        <div class="operator-bar text-center" id="operator-bar" sec:authorize="${hasAuthority('pur_purchase_order_add') or hasAuthority('pur_purchase_order_edit')}">
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
         </div>
@@ -415,8 +511,10 @@
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function(res){
-                    $('#code, #code_text').val(res.code)
+                    $('#code').val(res.code)
+                    $('#code_text').text(res.code)
                     $('#id').val(res.id)
+                    $('#createTime').text(res.createTime)
 
                     loadItem(res.itemList)
 
@@ -431,7 +529,7 @@
 
         function loadItem(itemList) {
             if (itemList) {
-                tableReset()
+                reset();
                 for (let item of itemList) {
                     $editableTable.editableTable('addEmptyLine')
                     let $tr = $("#table tr:last-child").prev()
@@ -444,6 +542,10 @@
                 }
 
                 calcTotalAmount()
+
+                $('#goods_receipt_container').table({
+                    fixedHead: true
+                })
             }
         }
     </script>
